2006-02-10  David Reveman  <davidr@novell.com>

	* Xext/Makefile.am (MITSHM_SRCS): Add shmint.h.

	* GL/symlink-mesa.sh: Add glapi.c to symlink_mesa_glapi.

2006-02-06  David Reveman  <davidr@novell.com>

	* GL/glx/glxscreens.c: GLX_MESA_render_texture ->
	GLX_EXT_texture_from_pixmap.

	* GL/glx/glxcmdsswap.c (__glXSwapVendorPrivate):
	* GL/glx/glxcmds.c (__glXVendorPrivate): X_GLXvop_BindTexImageMESA ->
	X_GLXvop_BindTexImageEXT and X_GLXvop_ReleaseTexImageMESA ->
	X_GLXvop_ReleaseTexImageEXT.

	* GL/glx/glxcmdsswap.c (__glXSwapBindTexImageEXT):
	(__glXSwapReleaseTexImageEXT): Correct types for drawId and buffer.

2006-02-02  David Reveman  <davidr@novell.com>

	* GL/glx/glxscreens.c: Allow support for GL_NV_texture_env_combine4 and
	GL_ARB_texture_non_power_of_two.

2006-02-01  David Reveman  <davidr@novell.com>

	* GL/mesa/X/xf86glx.c (init_screen_visuals): Pass the correct visual
	to XMesaCreateVisual.
	Allow ARGB visuals when building with COMPOSITE.

	* fb/fbcompose.c (fbCompositeRect): Add a chunk of code that somehow
	got lost when moving code from the xserver tree.
	(fbCompositeRect):
	(fbFetchTransformed): Repeat type correction.

	* fb/fbbltone.c: Negative stride fix.

	* hw/xgl/xglglx.h:
	* hw/xgl/xglglx.c:
	* hw/xgl/glxext/xglglxext.c: Some GLX code cleanups.

	* hw/xgl/glxext/xglglxlog.c:
	* hw/xgl/glxext/xglglxext.c: Match _glapi_table in mesa 6.4.1.
	(xglScreenProbe): __xglScreenInfo -> __xglScreenInfoPtr.

	* hw/xgl/glxext/xglglxlog.c: 
	* hw/xgl/glxext/xglglxext.c (xglScreenProbe): modes are no longer
	necessarily in an array.

	* hw/xgl/xglcompose.c (xglCompositeGeneral):
	* hw/xgl/xglpict.c (xglUpdatePicture): repeat -> repeatType.

2006-01-18  Dave Airlie  <airlied@linux.ie>

	* Xext/Makefile.am:
	* dbe/Makefile.am:
	* fb/Makefile.am:
	* include/Makefile.am:
	* mi/Makefile.am:
	* miext/shadow/Makefile.am:
	* render/Makefile.am:
	Wrap sdk_HEADERS in if XORG as otherwise installing non-xorg
	servers breaks.
